2009-05-07  Tomas Cerha  <cerha@brailcom.org>

	* COPYING:
	* ChangeLog.lib.1:
	* ChangeLog.lib.2:
	* ChangeLog.lib.3:
	* ChangeLog.lib.4:
	* lib/COPYING:
	* lib/ChangeLog:
	* lib/ChangeLog.1:
	* lib/ChangeLog.2:
	* lib/ChangeLog.3:
	Old roteted ChangeLogs and COPYING file moved from `lib' to the root directory..

2009-05-07  Tomas Cerha  <cerha@brailcom.org>

	* ChangeLog.1:
	* lib/ChangeLog:
	Year 2009 changes from lib/Changelog merged into the main ChageLog.  Older changes rotated..

2009-05-07  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/list.py:
	Exclude disabled columns also from previously saved columns..

2009-05-05  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/presentation/spec.py:
	* lib/pytis/web/form.py:
	Added support for placing arbitrary content into web form layout.

2009-04-30  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Added hack clarification comment.

2009-03-30  Milan Zamazal  <pdm@brailcom.org>

	* tools/gensql.py:
	Gensql: Check for duplicate definitions and warn about them.

2009-03-04  Tomas Cerha  <cerha@brailcom.org>

	* tools/gensql.py: 
	Use `char' instead of `varchar' for strings with minlen == maxlen.
	
	* Makefile: 
	Avoid using echo -e in `check-lib'.

2009-02-19  Tomas Cerha  <cerha@brailcom.org>

	* bin/pytis:
	Wx import moved to `pytis.form'.
	
2009-02-19  Tomas Cerha  <cerha@brailcom.org>

	* translations/pytis.es.po:
	Translations updated.

2009-01-27  Tomas Cerha  <cerha@brailcom.org>

	* Makefile:
	New target `all'.

2008-12-18  Tomas Cerha  <cerha@brailcom.org>

	* translations/pytis.cs.po: 
	* translations/pytis.de.po: 
	* translations/pytis.es.po: 
	* translations/pytis.fr.po: 
	* translations/pytis.hu.po: 
	* translations/pytis.pl.po: 
	* translations/pytis.sk.po:
	Updated.

2008-11-04  Tomas Cerha  <cerha@brailcom.org>

	* translations/pytis.cs.po: 
	* translations/pytis.de.po: 
	* translations/pytis.pl.po: 
	* translations/pytis.sk.po: 
	Deleted obsolete translations.
